--- a/client/src/pages/notfound/NotFound.css
+++ b/client/src/pages/notfound/NotFound.css
@@ -31,6 +31,10 @@
     color: black;
 }
 
+#dark .notFoundLink{
+    color: var(--color-light-text);
+}
+
 @media (prefers-reduced-motion: no-preference) {
     .notFoundLogo {
         animation: logoSpin infinite 15s linear;
